cluster/media/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
      containers:
        - image: ghcr.io/onedr0p/prowlarr-nightly:1.0.0.2165@sha256:aa1c92899a95fb95651bab9457330620bceacbc24dc7adf3c9d35924f8dbf04a
          name: prowlarr
          resources:
            requests:
              cpu: 15m
              memory: 100Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          ports:
            - containerPort: 9696
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
