cluster/media/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9696
  selector:
    app: prowlarr
