cluster/media/prowlarr/ingress-no-sso.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-no-sso
  annotations:
    nginx.ingress.kubernetes.io/enable-global-auth: 'false'
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: prowlarr.sko.ai
    http:
      paths:
      - backend:
          service:
            name: prowlarr
            port:
              number: 80
        path: /\d+/(api|download)
        pathType: Prefix
